syntax = "proto3";

package group;

option go_package = "broker-service/proto";

message AddWordToUserRequest {
    string word = 1;
    string definition = 2;
    string group_id = 3;
    uint32 user_id = 4;
    string token = 5;
}

message AddWordToUserResponse {
    uint32 word_id = 1;
}