syntax = "proto3";

package group;

option go_package = "broker-service/proto";

message CreateGroupRequest {
    string title = 1;
    string token = 2;
}