syntax = "proto3";

package group;

option go_package = "broker-service/proto";

message DeleteGroupRequest {
    string token = 1;
    string group_id = 2;
}
