syntax = "proto3";

package group;

option go_package = "broker-service/proto";

import "add_student.proto";
import "add_word_to_user.proto";
import "create_group.proto";
import "delete_group.proto";
import "find_group.proto";
import "find_student.proto";
import "find_teacher.proto";
import "statistics_requests.proto";
import "remove_student.proto";
import "google/protobuf/empty.proto";

service GroupService {
    rpc AddStudent(AddStudentRequest) returns (google.protobuf.Empty);
    rpc AddWordToUser(AddWordToUserRequest) returns (AddWordToUserResponse);
    rpc CreateGroup(CreateGroupRequest) returns (google.protobuf.Empty);
    rpc DeleteGroup(DeleteGroupRequest) returns (google.protobuf.Empty);
    rpc FindGroup(FindGroupRequest) returns (GroupResponse);
    rpc FindStudent(FindStudentRequest) returns (StudentResponse);
    rpc FindTeacher(FindTeacherRequest) returns (TeacherResponse);
    rpc FindGroupsTeacher(FindGroupsTeacherRequest) returns (stream GroupResponse);
    rpc FindGroupsStudent(FindGroupsStudentRequest) returns (stream GroupResponse);
    rpc GetStatistics(GetStatisticsRequest) returns (StatisticsResponse);
    rpc RemoveStudent(RemoveStudentRequest) returns (google.protobuf.Empty);
}
