syntax = "proto3";

package group;

option go_package = "broker-service/proto";

message RemoveStudentRequest {
    string token = 1;
    string group_id = 2;
    uint32 user_id = 3;
}
